--- a/quinzena2/bugfixes/dia4-aula8/home.html
+++ b/quinzena2/bugfixes/dia4-aula8/home.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" type="text/css" href="index.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
     <title>For Ever 4</title>
 </head>
 
@@ -16,7 +16,7 @@
         <div class="container" id="container-de-descricao"><br><br>
             <p> Somos uma empresa focada <br>em tornar a compra de <br>roupas mais fácil </p>
             <ol>
-                <li> Ache os melhores descontos </li>
+                <li class="decimal"> Ache os melhores descontos </li>
                 <li> Busque pelos seus gostos</li>
             </ol>
             <h3> Realize seus sonhos conosco</h3>
